manifest/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: load-generator-gateway
  namespace: load-generator
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: load-generator
  namespace: load-generator
spec:
  hosts:
  - "*"
  gateways:
  - load-generator-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /trigger
    route:
    - destination:
        host: frontend
        port:
          number: 5001
